Fixed font sizing in awards page

--- a/awards.html
+++ b/awards.html
@@ -50,14 +50,14 @@
         }
 
         .timeline-date {
-            font-size: 1.5rem;
+            font-size: clamp(0.1rem, 2vw, 1.5rem);
             font-weight: bold;
             color: #01F9C6;
             margin-right: 1.5rem;
         }
 
         .timeline-content h3 {
-            font-size: 1.25rem;
+            font-size: clamp(0.1rem, 2vw, 1.5rem);
             color: white;
             margin: 0;
         }
