Added SWE link and changed color of about me section

--- a/extracurriculars.html
+++ b/extracurriculars.html
@@ -271,7 +271,10 @@
     <div class="popup" id="fund">
         <div class="popup-content">
             <span class="close" onclick="closePopup('fund')">&times;</span>
-            <h1 class="popup-title">Society of Women Engineers (SWE) Fundraising Director</h1>
+            <h1 class="popup-title">
+                <a href="https://swe.cornell.edu/eboard.html" target="_blank" rel="noopener noreferrer">Society of Women
+                    Engineers Fundraising Director</a>
+            </h1>
             <p>Lead a committee to plan and organize fundraising events, secure grants, and manage sponsorships to
                 support SWE initiatives. Oversee team efforts to increase funding for professional development and
                 outreach activities, driving the growth and success of SWE’s mission on campus.</p>
