--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         .about-text {
             font-size: clamp(0.1rem, 1.8vw, 1.4rem);
-            color: #D3D3D3;
+            color: white;
             max-width: 95%;
             line-height: 1.6;
             margin-top: 1rem;
