Fixed about me and projects pages

--- a/index.html
+++ b/index.html
@@ -146,14 +146,22 @@
 
     <div class="about-section">
         <div class="about-title"> About Me</div>
-        <div class="about-text"> Hi! I'm Christina Unkenholz, a senior at Cornell University majoring in Computer
-            Science
-            with a minor in Information Science. I’m passionate about leveraging technology to solve complex challenges,
-            whether through data analysis, machine learning, or software development. With experience in building
-            predictive models and developing web applications, I bring strong analytical skills, technical expertise,
-            and a commitment to delivering innovative solutions. Outside of work, I enjoy traveling to new places,
-            finding new hiking trails, and discovering new music. I'm looking for opportunities where I can apply my
-            skills to make an impact and continue growing as a developer in a dynamic and collaborative environment.
+        <div class="about-text">
+            <p>Hi! I'm Christina Unkenholz, a senior at Cornell University majoring in Computer
+                Science with a minor in Information Science. I'm passionate about using technology to bring ideas to
+                life, solve meaningful problems, and create connections that matter. For me, it’s not just about writing
+                code—it’s about the people behind it and the impact it can have on communities.</p>
+
+            <p>Building and fostering communities is a big part of who I am. Whether it’s organizing events that bring
+                people together, creating spaces for mentorship and support, or collaborating on shared goals, I believe
+                that strong communities inspire growth and innovation. This passion for connection drives not just my
+                leadership roles but also how I approach my work: with empathy, teamwork, and a desire to make a
+                difference.</p>
+
+            <p>I also value curiosity and balance in life—whether I’m hiking through nature, exploring new places, or
+                discovering a new recipe on my cooking journey. I strive to bring that same sense of exploration and
+                openness to my career, where I aim to grow as a developer while contributing to projects that matter. My
+                goal is simple: to create technology and connections that leave a lasting, positive impact.</p>
         </div>
     </div>
 </body>
